# simple-dspy-ui

./: README.md  ROADMAP.md  pyproject.toml
app/: pyproject.toml
app/src/: app.py
app/src/simple_dspy_ui/: app.py
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/: dspy_models_config.py
backend/app/dspy_programs/: simple_copro_optimizer.py
backend/app/simple_dspy_ui/: generate_data_ui.py  main_ui.py  simple_dspy_tutorial.py  ui.py
src/simple_dspy_ui/: app.py
