[project]
name = "simple-dspy-ui"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christoph Holthaus", email = "christoph.holthaus+git@choltha.net"},
]
dependencies = [
    "dspy-ai>=2.4.9",
    "streamlit>=1.35.0",
    "watchdog>=4.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "-"}


[tool.pdm]
distribution = false
